--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="headshot">
-        <img src="images/aaron1.jpg" alt="Aaron Vaz Headshot" />
+        <img src="aaron1.jpg" alt="Aaron Vaz Headshot" />
       </div>
     </section>
 
@@ -72,19 +72,19 @@
       <h2>Skills</h2>
       <div class="cells">
         <div class="cell">
-          <img src="images/html-logo.webp" alt="HTML logo" />
+          <img src="html-logo.webp" alt="HTML logo" />
           <span>HTML</span>
         </div>
         <div class="cell">
-          <img src="images/css-logo.webp" alt="CSS logo" />
+          <img src="css-logo.webp" alt="CSS logo" />
           <span>CSS</span>
         </div>
         <div class="cell">
-          <img src="images/javascript-logo.webp" alt="JavaScript logo" />
+          <img src="javascript-logo.webp" alt="JavaScript logo" />
           <span>JavaScript</span>
         </div>
         <div class="cell">
-          <img src="images/python-logo.png" alt="Python logo" />
+          <img src="python-logo.png" alt="Python logo" />
           <span>Python</span>
         </div>
       </div>
@@ -109,12 +109,12 @@
     <ul>
       <li>
         <strong>ITSA Certificate</strong><br />
-        <img src="images/itsacertificate.jpg" alt="ITSA Certificate" />
+        <img src="itsacertificate.jpg" alt="ITSA Certificate" />
       </li>
       <li>
         <strong>Deloitte Python Job Simulation (Forage)</strong><br />
         A virtual job simulation focused on Python-based tasks.<br />
-        <img src="images/deloittepythonjobsimulation.png" alt="Deloitte Certificate" />
+        <img src="deloittepythonjobsimulation.png" alt="Deloitte Certificate" />
       </li>
     </ul>
   </div>
